--- a/package.json
+++ b/package.json
@@ -6,17 +6,54 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint-next": "next lint",
+    "lint": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\" && eslint \"src/**/*.{js,jsx,ts,tsx,json,md}\" --fix && stylelint  --fix \"src/**/*scss\"",
+    "sass:fix": "stylelint \"src/**/*.{css,scss}\" --fix",
+    "sass:lint": "stylelint \"src/**/*.{css,scss}\"",
+    "prettier:check": "prettier --check \"src/**/*.scss\"",
+    "prettier:fix": "prettier --write --parser scss \"src/**/*.scss\"",
+    "stylelint-check": "stylelint-config-prettier-check"
   },
   "dependencies": {
+    "next": "13.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "eslint": "8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-functional": "^5.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-webpack-plugin": "^4.0.0",
+    "madge": "^6.0.0",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.3",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-declaration-strict-value": "^1.9.2",
+    "stylelint-order": "^6.0.2",
+    "stylelint-prettier": "^3.0.0",
+    "stylelint-scss": "^4.4.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "4.9.5"
   }
 }
