--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "sass:lint": "stylelint \"src/**/*.{css,scss}\"",
     "prettier:check": "prettier --check \"src/**/*.scss\"",
     "prettier:fix": "prettier --write --parser scss \"src/**/*.scss\"",
-    "stylelint-check": "stylelint-config-prettier-check"
+    "stylelint-check": "stylelint-config-prettier-check",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "13.2.1",
@@ -41,7 +43,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-webpack-plugin": "^4.0.0",
-    "madge": "^6.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "stylelint": "^14.16.1",
@@ -55,5 +58,16 @@
     "stylelint-scss": "^4.4.0",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "4.9.5"
+  },
+  "lint-staged": {
+    "./src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
+      "eslint --fix",
+      "git add"
+    ],
+    "./src/**/*scss": [
+      "stylelint --fix",
+      "git-add"
+    ]
   }
 }
