--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "stylelint-check": "stylelint-config-prettier-check",
     "pre-commit": "lint-staged",
     "prepare": "husky install",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "13.2.1",
@@ -23,6 +25,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "18.14.1",
@@ -31,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "babel-loader": "^8.3.0",
     "eslint": "8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.2.1",
@@ -52,6 +64,7 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
+    "storybook-addon-sass-postcss": "^0.1.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-sass-guidelines": "^9.0.1",
