--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
+    "storybook-addon-next": "^1.7.2",
     "storybook-addon-sass-postcss": "^0.1.3",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
