--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin-tslint": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "babel-loader": "^8.3.0",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.2.1",
