--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "18.14.1",
@@ -44,7 +45,6 @@
     "@typescript-eslint/eslint-plugin-tslint": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "babel-loader": "^8.3.0",
-    "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.2.1",
