--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "next": "13.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.0.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
